# src/pool_api/apis/pool_api.py
@@ -26,6 +26,7 @@ from pool_api.models.get_user_stats404_response import GetUserStats404Response
 from pool_api.models.node import Node
 from chauff_cmn.models import Pool
 from pool_api.models.pool_stats import PoolStats
+from pool_api.models.pool_top import PoolTop
 
 router = APIRouter()
 
@@ -82,3 +83,19 @@ async def get_user_stats(
     if not BasePoolApi.subclasses:
         raise HTTPException(status_code=500, detail="Not implemented")
     return await BasePoolApi.subclasses[0]().get_user_stats(user)
+
+
+@router.get(
+    "/v1/top",
+    responses={
+        200: {"model": PoolTop, "description": "OK"},
+    },
+    tags=["pool"],
+    summary="Top metrics",
+    response_model_by_alias=True,
+)
+async def get_top(
+) -> PoolTop:
+    if not BasePoolApi.subclasses:
+        raise HTTPException(status_code=500, detail="Not implemented")
+    return await BasePoolApi.subclasses[0]().get_top()
