# src/pool_api/impl/v1/handlers/pool.py
@@ -4,6 +4,7 @@ from pool_api.apis.pool_api_base import BasePoolApi
 from pool_api.container import get_container
 from pool_api.models.node import Node
 from pool_api.models.pool_stats import PoolStats
+from pool_api.models.pool_top import PoolTop
 
 
 class PoolApi(BasePoolApi):
@@ -20,3 +21,8 @@ class PoolApi(BasePoolApi):
         user: str,
     ) -> PoolStats:
         return await get_container().pool_service.get_user_stats(user)
+
+    async def get_top(
+        self,
+    ) -> PoolTop:
+        return await get_container().pool_service.get_top()
